@startuml Locacao de veículo

title Locação de veículo

class Cliente{
    - nome: string
    - cpf: int
    - dataNascimento: String
    - CNH: String
    + constructor(nome, cpf, dataNascimento, CNH)
}

class Veiculo{
    - modelo: string
    - ano: Int
    - cor: string
    - disponivel: bool
    + constructor(modelo, ano, cor, disponivel)
}

class Pagamento{
    - modoPagamento: String
    - tipoTransacao: string
    - aluguel: float
    - preco: float
    - valorAdicional: String
    - parcelado: String
    + constructor(modoPagamento, tipoTransacao, aluguel, preco, valorAdicional, parcelado)
}

class Locadora{
    - cnpj: String
    - endereco: String
    - qtd_veiculos: int
    - telefone: String
    + constructor(cnpj, endereco, qtd_veiculos, telefone)
}

class Funcionario{
    - nome: String
    - matricula: int
    - cargo: String
    - salario: float
    + constructor(nome, matricula, cargo, salario)

}

class Vendedor{
    - funcionario: Funcionario
    - comissao: float
    + constructor(Funcionario, comissao)
}

class Seguro{
    - veiculo: Veiculo
    - valor: float
    - tempo: Int
    + constructor(Veiculo, valor, tempo)
}

class Gerente{
    - funcionario: Funcionario
    - comissao: float
    + constructor(Funcionario, comissao)
}

Cliente --> Veiculo
Funcionario <|-- Vendedor
Veiculo <|-- Seguro
Veiculo --> Locadora
Pagamento <-- Cliente
Funcionario <-- Locadora
Vendedor --> Pagamento
Funcionario <|-- Gerente
Gerente --> Pagamento



@enduml